loadbalancer: update hiera parameters for HAproxy/keepalived split
In puppet-tripleo, we split loadbalancer.pp in 2 classes to be more
composable: haproxy & keepalived.
This patch is just updating all hiera parameters related to HAproxy &
keepalived.

Depends-On: I46ed8348dc990d9aa0d896e1abea3b30a8292634

Change-Id: Ibf56184cd10af1d0dcae773c02b0f31a6204badf

--- a/puppet/extraconfig/all_nodes/neutron-midonet-all-nodes.yaml
+++ b/puppet/extraconfig/all_nodes/neutron-midonet-all-nodes.yaml
@@ -85,7 +85,7 @@ resources:
                 tripleo::cluster::cassandra::ssl_storage_port: {get_param: CassandraSslStoragePort}
                 tripleo::cluster::cassandra::client_port: {get_param: CassandraClientPort}
                 tripleo::cluster::cassandra::client_port_thrift: {get_param: CassandraClientPortThrift}
-                tripleo::loadbalancer::midonet_api: true
+                tripleo::haproxy::midonet_api: true
                 # Missed Neutron Puppet data
                 neutron::agents::dhcp::interface_driver: 'neutron.agent.linux.interface.MidonetInterfaceDriver'
                 neutron::agents::dhcp::dhcp_driver: 'midonet.neutron.agent.midonet_driver.DhcpNoOpDriver'
