--- a/puppet/services/pacemaker/loadbalancer.yaml
+++ b/puppet/services/pacemaker/loadbalancer.yaml
@@ -23,8 +23,8 @@ outputs:
       config_settings:
         map_merge:
           - get_attr: [LoadbalancerServiceBase, role_data, config_settings]
-          - tripleo::loadbalancer::haproxy_service_manage: false
-            tripleo::loadbalancer::mysql_clustercheck: true
-            tripleo::loadbalancer::manage_vip: false
+          - tripleo::haproxy::haproxy_service_manage: false
+            tripleo::haproxy::mysql_clustercheck: true
+            tripleo::haproxy::keepalived: false
       step_config: |
         include ::tripleo::profile::pacemaker::loadbalancer
