--- a/puppet/vip-config.yaml
+++ b/puppet/vip-config.yaml
@@ -32,11 +32,20 @@ resources:
                 horizon_vip: {get_input: horizon_vip}
                 redis_vip: {get_input: redis_vip}
                 mysql_vip: {get_input: mysql_vip}
-                tripleo::loadbalancer::public_virtual_ip: {get_input: public_virtual_ip}
-                tripleo::loadbalancer::controller_virtual_ip: {get_input: control_virtual_ip}
-                tripleo::loadbalancer::internal_api_virtual_ip: {get_input: internal_api_virtual_ip}
-                tripleo::loadbalancer::storage_virtual_ip: {get_input: storage_virtual_ip}
-                tripleo::loadbalancer::storage_mgmt_virtual_ip: {get_input: storage_mgmt_virtual_ip}
+                public_virtual_ip: {get_input: public_virtual_ip}
+                controller_virtual_ip: {get_input: control_virtual_ip}
+                internal_api_virtual_ip: {get_input: internal_api_virtual_ip}
+                storage_virtual_ip: {get_input: storage_virtual_ip}
+                storage_mgmt_virtual_ip: {get_input: storage_mgmt_virtual_ip}
+                # public_virtual_ip and controller_virtual_ip are needed in
+                # both HAproxy & keepalived.
+                tripleo::haproxy::public_virtual_ip: {get_input: public_virtual_ip}
+                tripleo::haproxy::controller_virtual_ip: {get_input: control_virtual_ip}
+                tripleo::keepalived::public_virtual_ip: {get_input: public_virtual_ip}
+                tripleo::keepalived::controller_virtual_ip: {get_input: control_virtual_ip}
+                tripleo::keepalived::internal_api_virtual_ip: {get_input: internal_api_virtual_ip}
+                tripleo::keepalived::storage_virtual_ip: {get_input: storage_virtual_ip}
+                tripleo::keepalived::storage_mgmt_virtual_ip: {get_input: storage_mgmt_virtual_ip}
                 tripleo::redis_notification::haproxy_monitor_ip: {get_input: control_virtual_ip}
 
 
