Convert Swift proxy to composable services format
Switch the swift proxy service to use the new composable
services format.

Change-Id: Idc9ac64818882e73836ac99bbad56eec184c9a5d
Partially-Implements: blueprint composable-services-within-roles
Depends-On: I6bd72284911f3f449157a6fc00b76682dd53bd8c

--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -508,10 +508,6 @@ parameters:
     description: A random string to be used as a salt when hashing to determine mappings in the ring.
     type: string
     hidden: true
-  SwiftPassword:
-    description: The password for the swift service account, used by the swift proxy services.
-    type: string
-    hidden: true
   SwiftMountCheck:
     default: 'false'
     description: Value of mount_check in Swift account/container/object -server.conf
@@ -656,6 +652,7 @@ parameters:
       - OS::TripleO::Services::RabbitMQ
       - OS::TripleO::Services::Loadbalancer
       - OS::TripleO::Services::Memcached
+      - OS::TripleO::Services::SwiftProxy
     description: A list of service resources (configured in the Heat
                  resource_registry) which represent nested stacks
                  for each service that should get installed on the Controllers.
@@ -968,7 +965,6 @@ resources:
           SwiftMountCheck: {get_param: SwiftMountCheck}
           SwiftMinPartHours: {get_param: SwiftMinPartHours}
           SwiftPartPower: {get_param: SwiftPartPower}
-          SwiftPassword: {get_param: SwiftPassword}
           SwiftReplicas: { get_param: SwiftReplicas}
           TimeZone: {get_param: TimeZone}
           VirtualIP: {get_attr: [VipMap, net_ip_map, ctlplane]} # deprecated. Use per service VIP settings instead now.
