--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -560,11 +560,6 @@ parameters:
     default: true
     description: Whether to manage Swift rings or not
     type: boolean
-  SwiftPassword:
-    description: The password for the swift service account, used by the swift proxy
-      services.
-    hidden: true
-    type: string
   SwiftProxyVirtualIP:
     type: string
     default: ''
@@ -572,10 +567,6 @@ parameters:
     type: number
     default: 3
     description: How many replicas to use in the swift rings.
-  SwiftWorkers:
-    default: 0
-    description: Number of workers for Swift service.
-    type: number
   TimeZone:
     default: 'UTC'
     description: The timezone to be set on controller nodes.
@@ -824,7 +815,6 @@ resources:
         cinder_workers: {get_param: CinderWorkers}
         nova_workers: {get_param: NovaWorkers}
         neutron_workers: {get_param: NeutronWorkers}
-        swift_workers: {get_param: SwiftWorkers}
         neutron_enable_tunneling: {get_param: NeutronEnableTunnelling}
         neutron_enable_l2pop: {get_param: NeutronEnableL2Pop}
         haproxy_log_address: {get_param: HAProxySyslogAddress}
@@ -1059,18 +1049,11 @@ resources:
         control_virtual_interface: {get_param: ControlVirtualInterface}
         public_virtual_interface: {get_param: PublicVirtualInterface}
         swift_hash_suffix: {get_param: SwiftHashSuffix}
-        swift_password: {get_param: SwiftPassword}
         swift_part_power: {get_param: SwiftPartPower}
         swift_ring_build: {get_param: SwiftRingBuild}
         swift_replicas: {get_param: SwiftReplicas}
         swift_min_part_hours: {get_param: SwiftMinPartHours}
         swift_mount_check: {get_param: SwiftMountCheck}
-        swift_public_url: {get_param: [EndpointMap, SwiftPublic, uri]}
-        swift_internal_url: {get_param: [EndpointMap, SwiftInternal, uri]}
-        swift_admin_url: {get_param: [EndpointMap, SwiftAdmin, uri]}
-        swift_public_url_s3: {get_param: [EndpointMap, SwiftS3Public, uri]}
-        swift_internal_url_s3: {get_param: [EndpointMap, SwiftS3Internal, uri]}
-        swift_admin_url_s3: {get_param: [EndpointMap, SwiftS3Admin, uri]}
         enable_package_install: {get_param: EnablePackageInstall}
         enable_package_upgrade: {get_attr: [UpdateDeployment, update_managed_packages]}
         sahara_password: {get_param: SaharaPassword}
@@ -1203,26 +1186,15 @@ resources:
                 tripleo::fencing::config: {get_input: fencing_config}
 
                 # Swift
+                # FIXME: need to move proxy_local_net_ip into swift-proxy.yaml
                 swift::proxy::proxy_local_net_ip: {get_input: swift_proxy_network}
-                swift::proxy::authtoken::auth_uri: {get_input: keystone_auth_uri}
-                swift::proxy::authtoken::identity_uri: {get_input: keystone_identity_uri}
                 swift::storage::all::storage_local_net_ip: {get_input: swift_management_network}
                 swift::swift_hash_suffix: {get_input: swift_hash_suffix}
-                swift::proxy::authtoken::admin_password: {get_input: swift_password}
-                swift::proxy::workers: {get_input: swift_workers}
                 tripleo::ringbuilder::build_ring: { get_input: swift_ring_build }
                 tripleo::ringbuilder::part_power: {get_input: swift_part_power}
                 tripleo::ringbuilder::replicas: {get_input: swift_replicas}
                 tripleo::ringbuilder::min_part_hours: {get_input: swift_min_part_hours}
                 swift_mount_check: {get_input: swift_mount_check}
-                swift::keystone::auth::public_url: {get_input: swift_public_url }
-                swift::keystone::auth::internal_url: {get_input: swift_internal_url }
-                swift::keystone::auth::admin_url: {get_input: swift_admin_url }
-                swift::keystone::auth::public_url_s3: {get_input: swift_public_url_v3 }
-                swift::keystone::auth::internal_url_s3: {get_input: swift_internal_url_v3 }
-                swift::keystone::auth::admin_url_s3: {get_input: swift_admin_url_v3 }
-                swift::keystone::auth::password: {get_input: swift_password }
-                swift::keystone::auth::region: {get_input: keystone_region}
 
                 # Cinder
                 cinder_enable_db_purge: {get_input: cinder_enable_db_purge}
