--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -135,6 +135,7 @@ resource_registry:
   OS::TripleO::Services::RabbitMQ: puppet/services/rabbitmq.yaml
   OS::TripleO::Services::Loadbalancer: puppet/services/loadbalancer.yaml
   OS::TripleO::Services::Memcached: puppet/services/memcached.yaml
+  OS::TripleO::Services::SwiftProxy: puppet/services/swift-proxy.yaml
 
 parameter_defaults:
   EnablePackageInstall: false
