Configure ComputeServices via resource chains
This patch wires a Heat feature to configure
services via a Heat resource chain.

Additional patches will be able to configure
compute services using composable services.

Change-Id: Ib4fd8bffde51902aa19f9673a389600fc467fc45

--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -661,6 +661,13 @@ parameters:
                  for each service that should get installed on the Controllers.
     type: comma_delimited_list
 
+  ComputeServices:
+    default: []
+    description: A list of service resources (configured in the Heat
+                 resource_registry) which represent nested stacks
+                 for each service that should get installed on the Compute Nodes.
+    type: comma_delimited_list
+
 # Block storage specific parameters
   BlockStorageCount:
     type: number
@@ -992,6 +999,13 @@ resources:
           SchedulerHints: {get_param: ControllerSchedulerHints}
           ServiceConfigSettings: {get_attr: [ControllerServiceChain, config_settings]}
 
+  ComputeServiceChain:
+    type: OS::TripleO::Services
+    properties:
+      Services: {get_param: ComputeServices}
+      EndpointMap: {get_attr: [EndpointMap, endpoint_map]}
+      MysqlVirtualIPUri: {get_attr: [VipMap, net_ip_uri_map, {get_param: [ServiceNetMap, MysqlNetwork]}]}
+
   Compute:
     type: OS::Heat::ResourceGroup
     depends_on: Networks
@@ -1072,6 +1086,8 @@ resources:
           ServerMetadata: {get_param: ServerMetadata}
           SchedulerHints: {get_param: NovaComputeSchedulerHints}
           NodeIndex: '%index%'
+          ServiceConfigSettings: {get_attr: [ComputeServiceChain, config_settings]}
+
 
   BlockStorage:
     type: OS::Heat::ResourceGroup
@@ -1557,6 +1573,7 @@ resources:
         allnodes_extra: {get_attr: [AllNodesExtraConfig, config_identifier]}
         compute_config: {get_attr: [Compute, attributes, config_identifier]}
         deployment_identifier: {get_param: DeployIdentifier}
+      StepConfig: {get_attr: [ComputeServiceChain, step_config]}
 
   ObjectStorageNodesPostDeployment:
     type: OS::TripleO::ObjectStoragePostDeployment
