--- a/puppet/compute.yaml
+++ b/puppet/compute.yaml
@@ -339,6 +339,9 @@ parameters:
     type: json
     description: Optional scheduler hints to pass to nova
     default: {}
+  ServiceConfigSettings:
+    type: json
+    default: {}
 
 resources:
 
@@ -481,6 +484,7 @@ resources:
             - heat_config_%{::deploy_config_name}
             - compute_extraconfig
             - extraconfig
+            - service_configs
             - compute
             - ceph_cluster # provided by CephClusterConfig
             - ceph
@@ -495,6 +499,8 @@ resources:
             - neutron_opencontrail_data  # Optionally provided by ComputeExtraConfigPre
           merge_behavior: deeper
           datafiles:
+            service_configs:
+              mapped_data: {get_param: ServiceConfigSettings}
             compute_extraconfig:
               mapped_data: {get_param: NovaComputeExtraConfig}
             extraconfig:
