Configure ObjectStorage services via resource chains
Similar to the https://review.openstack.org/#/c/259568 which added support
for the composable services StepConfig and ServiceConfigSettings parameters
so that the Controller role supports composable services, this adds those
interfaces for the ObjectStorage role.

Note that at this time the ObjectStorage post config only supports steps
2, 3 and 4, not all those in services/README.rst

Partially-Implements: blueprint composable-services-within-roles
Change-Id: I22ffaa68a6ccd4be29d51674871268179bcddcbc

--- a/puppet/swift-storage.yaml
+++ b/puppet/swift-storage.yaml
@@ -121,6 +121,9 @@ parameters:
   NodeIndex:
     type: number
     default: 0
+  ServiceConfigSettings:
+    type: json
+    default: {}
 
 resources:
 
@@ -257,6 +260,7 @@ resources:
             - heat_config_%{::deploy_config_name}
             - object_extraconfig
             - extraconfig
+            - service_configs
             - object
             - swift_devices_and_proxy # provided by SwiftDevicesAndProxyConfig
             - all_nodes # provided by allNodesConfig
@@ -265,6 +269,8 @@ resources:
             - network
           merge_behavior: deeper
           datafiles:
+            service_configs:
+              mapped_data: {get_param: ServiceConfigSettings}
             common:
               raw_data: {get_file: hieradata/common.yaml}
             network:
