--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -713,6 +713,14 @@ parameters:
     type: json
     description: Optional scheduler hints to pass to nova
     default: {}
+  ObjectStorageServices:
+    default: []
+    description: A list of service resources (configured in the Heat
+                 resource_registry) which represent nested stacks
+                 for each service that should get installed on the ObjectStorage nodes.
+                 Note this role currently only supports steps 2, 3 and 4 configuration.
+    type: comma_delimited_list
+
 
 # Ceph storage specific parameters
   CephStorageCount:
@@ -1124,6 +1132,12 @@ resources:
           SchedulerHints: {get_param: BlockStorageSchedulerHints}
           NodeIndex: '%index%'
 
+  ObjectStorageServiceChain:
+    type: OS::TripleO::Services
+    properties:
+      Services: {get_param: ObjectStorageServices}
+      EndpointMap: {get_attr: [EndpointMap, endpoint_map]}
+
   ObjectStorage:
     type: OS::Heat::ResourceGroup
     depends_on: Networks
@@ -1156,6 +1170,7 @@ resources:
           ServerMetadata: {get_param: ServerMetadata}
           SchedulerHints: {get_param: ObjectStorageSchedulerHints}
           NodeIndex: '%index%'
+          ServiceConfigSettings: {get_attr: [ObjectStorageServiceChain, config_settings]}
 
   CephStorageServiceChain:
     type: OS::TripleO::Services
@@ -1576,6 +1591,7 @@ resources:
         allnodes_extra: {get_attr: [AllNodesExtraConfig, config_identifier]}
         objectstorage_config: {get_attr: [ObjectStorage, attributes, config_identifier]}
         deployment_identifier: {get_param: DeployIdentifier}
+      StepConfig: {get_attr: [ObjectStorageServiceChain, step_config]}
 
   BlockStorageNodesPostDeployment:
     type: OS::TripleO::BlockStoragePostDeployment
