--- a/puppet/swift-storage-post.yaml
+++ b/puppet/swift-storage-post.yaml
@@ -11,6 +11,10 @@ parameters:
   NodeConfigIdentifiers:
      type: json
      description: Value which changes if the node configuration may need to be re-applied
+  StepConfig:
+     type: string
+     description: Config manifests that will be used to step through the deployment.
+     default: ''
 
 resources:
 
@@ -42,6 +46,7 @@ resources:
         - ''
         - - get_file: manifests/overcloud_object.pp
           - get_file: manifests/ringbuilder.pp
+          - {get_param: StepConfig}
 
   StorageRingbuilderDeployment_Step2:
     type: OS::Heat::StructuredDeployments
