--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -345,10 +345,6 @@ parameters:
     default: false
     description: Whether to deploy Ceph Storage (OSD) on the Controller
     type: boolean
-  ControllerEnableSwiftStorage:
-    default: true
-    description: Whether to enable Swift Storage on the Controller
-    type: boolean
   ControllerSchedulerHints:
     type: json
     description: Optional scheduler hints to pass to nova
@@ -440,10 +436,6 @@ parameters:
     description: A random string to be used as a salt when hashing to determine mappings in the ring.
     type: string
     hidden: true
-  SwiftMountCheck:
-    default: 'false'
-    description: Value of mount_check in Swift account/container/object -server.conf
-    type: boolean
   SwiftMinPartHours:
     type: number
     default: 1
@@ -587,7 +579,6 @@ parameters:
       - OS::TripleO::Services::HAproxy
       - OS::TripleO::Services::Keepalived
       - OS::TripleO::Services::Memcached
-      - OS::TripleO::Services::SwiftProxy
       - OS::TripleO::Services::Redis
       - OS::TripleO::Services::NovaConductor
       - OS::TripleO::Services::MongoDb
@@ -596,6 +587,8 @@ parameters:
       - OS::TripleO::Services::NovaConsoleauth
       - OS::TripleO::Services::NovaVncproxy
       - OS::TripleO::Services::Ntp
+      - OS::TripleO::Services::SwiftProxy
+      - OS::TripleO::Services::SwiftStorage
     description: A list of service resources (configured in the Heat
                  resource_registry) which represent nested stacks
                  for each service that should get installed on the Controllers.
@@ -661,6 +654,7 @@ parameters:
   ObjectStorageServices:
     default:
       - OS::TripleO::Services::Ntp
+      - OS::TripleO::Services::SwiftStorage
     description: A list of service resources (configured in the Heat
                  resource_registry) which represent nested stacks
                  for each service that should get installed on the ObjectStorage nodes.
@@ -846,7 +840,6 @@ resources:
           PurgeFirewallRules: {get_param: PurgeFirewallRules}
           EnableGalera: {get_param: EnableGalera}
           EnableCephStorage: {get_param: ControllerEnableCephStorage}
-          EnableSwiftStorage: {get_param: ControllerEnableSwiftStorage}
           ExtraConfig: {get_param: ExtraConfig}
           FencingConfig: {get_param: FencingConfig}
           Flavor: {get_param: OvercloudControlFlavor}
@@ -885,7 +878,6 @@ resources:
           RedisVirtualIP: {get_attr: [RedisVirtualIP, ip_address]}
           RedisVirtualIPUri: {get_attr: [RedisVirtualIP, ip_address_uri]}
           SwiftHashSuffix: {get_param: SwiftHashSuffix}
-          SwiftMountCheck: {get_param: SwiftMountCheck}
           SwiftMinPartHours: {get_param: SwiftMinPartHours}
           SwiftPartPower: {get_param: SwiftPartPower}
           SwiftReplicas: { get_param: SwiftReplicas}
@@ -1061,7 +1053,6 @@ resources:
           KeyName: {get_param: KeyName}
           Flavor: {get_param: OvercloudSwiftStorageFlavor}
           HashSuffix: {get_param: SwiftHashSuffix}
-          MountCheck: {get_param: SwiftMountCheck}
           MinPartHours: {get_param: SwiftMinPartHours}
           PartPower: {get_param: SwiftPartPower}
           Image: {get_param: SwiftStorageImage}
