Configure CephStorage services via resource chains
Also wires in the steps into the CephStorage role.

Change-Id: Ib472f1279478ad7792349cc32bb3c5f510ba69fe

--- a/puppet/ceph-storage.yaml
+++ b/puppet/ceph-storage.yaml
@@ -96,6 +96,9 @@ parameters:
   NodeIndex:
     type: number
     default: 0
+  ServiceConfigSettings:
+    type: json
+    default: {}
 
 resources:
   CephStorage:
@@ -247,6 +250,7 @@ resources:
             - heat_config_%{::deploy_config_name}
             - ceph_extraconfig
             - extraconfig
+            - service_configs
             - ceph_cluster # provided by CephClusterConfig
             - ceph
             - '"%{::osfamily}"'
@@ -254,6 +258,8 @@ resources:
             - network
           merge_behavior: deeper
           datafiles:
+            service_configs:
+              mapped_data: {get_param: ServiceConfigSettings}
             common:
               raw_data: {get_file: hieradata/common.yaml}
             network:
