--- a/puppet/ceph-storage-post.yaml
+++ b/puppet/ceph-storage-post.yaml
@@ -13,6 +13,10 @@ parameters:
   NodeConfigIdentifiers:
      type: json
      description: Value which changes if the node configuration may need to be re-applied
+  StepConfig:
+    type: string
+    description: Config manifests that will be used to step through the deployment.
+    default: ''
 
 resources:
 
@@ -33,26 +37,44 @@ resources:
       group: puppet
       options:
         enable_debug: {get_param: ConfigDebug}
+        enable_hiera: True
+        enable_facter: False
+      inputs:
+      - name: step
       outputs:
       - name: result
       config:
-        get_file: manifests/overcloud_cephstorage.pp
+        list_join:
+        - ''
+        - - get_file: manifests/overcloud_cephstorage.pp
+          - {get_param: StepConfig}
 
-  CephStorageDeployment_Step1:
+  CephStorageDeployment_Step2:
     type: OS::Heat::StructuredDeployments
     depends_on: CephStorageArtifactsDeploy
     properties:
-      name: CephStorageDeployment_Step1
+      name: CephStorageDeployment_Step2
       servers:  {get_param: servers}
       config: {get_resource: CephStoragePuppetConfig}
       input_values:
+        step: 2
+        update_identifier: {get_param: NodeConfigIdentifiers}
+
+  CephStorageDeployment_Step3:
+    type: OS::Heat::StructuredDeployments
+    depends_on: CephStorageDeployment_Step2
+    properties:
+      name: CephStorageDeployment_Step3
+      servers:  {get_param: servers}
+      config: {get_resource: CephStoragePuppetConfig}
+      input_values:
+        step: 3
         update_identifier: {get_param: NodeConfigIdentifiers}
 
   # Note, this should come last, so use depends_on to ensure
   # this is created after any other resources.
   ExtraConfig:
-    depends_on: CephStorageDeployment_Step1
+    depends_on: CephStorageDeployment_Step3
     type: OS::TripleO::NodeExtraConfigPost
     properties:
         servers: {get_param: servers}
-
