--- a/puppet/ceph-cluster-config.yaml
+++ b/puppet/ceph-cluster-config.yaml
@@ -123,8 +123,10 @@ resources:
                 gnocchi::storage::ceph::ceph_keyring:
                   list_join:
                   - '.'
-                  - - 'client'
+                  - - '/etc/ceph/ceph'
+                    - 'client'
                     - {get_param: CephClientUserName}
+                    - 'keyring'
                 ceph_client_user_name: {get_param: CephClientUserName}
                 ceph_pools:
                   - {get_param: CinderRbdPoolName}
