--- a/puppet/extraconfig/ceph/ceph-external-config.yaml
+++ b/puppet/extraconfig/ceph/ceph-external-config.yaml
@@ -97,8 +97,10 @@ resources:
                 gnocchi::storage::ceph::ceph_keyring:
                   list_join:
                   - '.'
-                  - - 'client'
+                  - - '/etc/ceph/ceph'
+                    - 'client'
                     - {get_param: CephClientUserName}
+                    - 'keyring'
                 ceph_client_user_name: {get_param: CephClientUserName}
                 ceph_pools:
                   - {get_param: CinderRbdPoolName}
