Set rabbitmq loopback_users explicitely
In Fedora/RHEL land we carry a patch that sets the loopback_users
config explicitely to []. Since this patch diverges from upstream
and sometimes gets dropped by mistake during rebases, let's set
this value explicitely in our config files, instead of relying
on a patch that is distro-specific.

The patch is here:
http://pkgs.fedoraproject.org/cgit/rpms/rabbitmq-server.git/tree/rabbitmq-server-0004-Allow-guest-login-from-non-loopback-connections.patch

Change-Id: If9ca05b38a8bd2a6834c08336a816bbd0ae1ea94

--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -31,6 +31,7 @@ rabbitmq_kernel_variables:
 rabbitmq_config_variables:
   tcp_listen_options: '[binary, {packet, raw}, {reuseaddr, true}, {backlog, 128}, {nodelay, true}, {exit_on_close, false}, {keepalive, true}]'
   cluster_partition_handling: 'pause_minority'
+  loopback_users: '[]'
 
 mongodb::server::replset: tripleo
 mongodb::server::journal: false
