Enable proxy header parsing for heat
For handling the X-Forwarded-Proto, heat uses the http_proxy_to_wsgi
middleware from oslo.middleware. It used to work by default, but now
configuration is required to enable that. We require it since we are
effectively behind a proxy (HAProxy).

Change-Id: I256f27ec6a3f66316ff6aa3f78b2f1ec1472f097

--- a/puppet/services/heat-base.yaml
+++ b/puppet/services/heat-base.yaml
@@ -37,3 +37,4 @@ outputs:
         heat::rabbit_use_ssl: {get_param: RabbitClientUseSSL}
         heat::rabbit_port: {get_param: RabbitClientPort}
         heat::debug: {get_param: Debug}
+        heat::enable_proxy_headers_parsing: true
