Enable proxy header handling for cinder
Cinder is using http_proxy_to_wsgi middleware. This parses the
headers provided by the proxy, and helps us properly use TLS for
keystone discovery. There was an option introduced in this middleware
to have it disabled by default, and this change enables it.

Change-Id: Ia33b3fa04d71eab10effd0b33eb2c194282cd15b

--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -128,6 +128,10 @@ cinder::cron::db_purge::destination: '/dev/null'
 cinder::host: hostgroup
 cinder_user_enabled_backends: []
 
+# TODO(jaosorior): Move to cinder profile once cinder is moved as a composable
+# service.
+cinder::api::enable_proxy_headers_parsing: true
+
 # heat
 heat::engine::configure_delegated_roles: false
 heat::engine::trusts_delegated_roles: []
