--- a/environments/network-management-v6.yaml
+++ b/environments/network-management-v6.yaml
@@ -1,4 +1,4 @@
-# Enable the creation of a system management network. This
+# Enable the creation of an IPv6 system management network. This
 # creates a Neutron network for isolated Overcloud
 # system management traffic and configures each role to
 # assign a port (related to that role) on that network.
@@ -7,19 +7,19 @@
 # comments in the sample network config templates in
 # network/config/ for an example.
 resource_registry:
-  OS::TripleO::Network::Management: ../network/management.yaml
+  OS::TripleO::Network::Management: ../network/management_v6.yaml
 
   # Port assignments for the controller role
-  OS::TripleO::Controller::Ports::ManagementPort: ../network/ports/management.yaml
+  OS::TripleO::Controller::Ports::ManagementPort: ../network/ports/management_v6.yaml
 
   # Port assignments for the compute role
-  OS::TripleO::Compute::Ports::ManagementPort: ../network/ports/management.yaml
+  OS::TripleO::Compute::Ports::ManagementPort: ../network/ports/management_v6.yaml
 
   # Port assignments for the ceph storage role
-  OS::TripleO::CephStorage::Ports::ManagementPort: ../network/ports/management.yaml
+  OS::TripleO::CephStorage::Ports::ManagementPort: ../network/ports/management_v6.yaml
 
   # Port assignments for the swift storage role
-  OS::TripleO::SwiftStorage::Ports::ManagementPort: ../network/ports/management.yaml
+  OS::TripleO::SwiftStorage::Ports::ManagementPort: ../network/ports/management_v6.yaml
 
   # Port assignments for the block storage role
-  OS::TripleO::BlockStorage::Ports::ManagementPort: ../network/ports/management.yaml
+  OS::TripleO::BlockStorage::Ports::ManagementPort: ../network/ports/management_v6.yaml
