--- a/puppet/cinder-storage-post.yaml
+++ b/puppet/cinder-storage-post.yaml
@@ -11,6 +11,10 @@ parameters:
   NodeConfigIdentifiers:
      type: json
      description: Value which changes if the node configuration may need to be re-applied
+  StepConfig:
+    type: string
+    description: Config manifests that will be used to step through the deployment.
+    default: ''
 
 resources:
 
@@ -32,22 +36,55 @@ resources:
       group: puppet
       options:
         enable_debug: {get_param: ConfigDebug}
+        enable_hiera: True
+        enable_facter: False
+      inputs:
+      - name: step
       outputs:
       - name: result
       config:
-        get_file: manifests/overcloud_volume.pp
+        list_join:
+        - ''
+        - - get_file: manifests/overcloud_volume.pp
+          - {get_param: StepConfig}
 
-  VolumeDeployment_Step1:
+  VolumeDeployment_Step2:
     type: OS::Heat::StructuredDeployments
+    depends_on: VolumeArtifactsDeploy
     properties:
-      name: VolumeDeployment_Step1
+      name: VolumeDeployment_Step2
       servers:  {get_param: servers}
       config: {get_resource: VolumePuppetConfig}
+      input_values:
+        step: 2
+        update_identifier: {get_param: NodeConfigIdentifiers}
+
+  VolumeDeployment_Step3:
+    type: OS::Heat::StructuredDeployments
+    depends_on: VolumeDeployment_Step2
+    properties:
+      name: VolumeDeployment_Step3
+      servers:  {get_param: servers}
+      config: {get_resource: VolumePuppetConfig}
+      input_values:
+        step: 3
+        update_identifier: {get_param: NodeConfigIdentifiers}
+
+  VolumeDeployment_Step4:
+    type: OS::Heat::StructuredDeployments
+    depends_on: VolumeDeployment_Step3
+    properties:
+      name: VolumeDeployment_Step4
+      servers:  {get_param: servers}
+      config: {get_resource: VolumePuppetConfig}
+      input_values:
+        step: 4
+        update_identifier: {get_param: NodeConfigIdentifiers}
 
   # Note, this should come last, so use depends_on to ensure
   # this is created after any other resources.
   ExtraConfig:
-    depends_on: VolumeDeployment_Step1
+    depends_on: VolumeDeployment_Step4
     type: OS::TripleO::NodeExtraConfigPost
     properties:
         servers: {get_param: servers}
